Run data wrangling exercises

--- a/lessons/apache_spark/7_data_wrangling-sql.ipynb
+++ b/lessons/apache_spark/7_data_wrangling-sql.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,26 +45,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "path = \"data/sparkify_log_small.json\"\n",
+    "#path = \"data/sparkify_log_small.json\"\n",
+    "path = \"../../data/log_data/2018/11/*.json\"\n",
     "user_log = spark.read.json(path)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[Row(artist='Showaddywaddy', auth='Logged In', firstName='Kenneth', gender='M', itemInSession=112, lastName='Matthews', length=232.93342, level='paid', location='Charlotte-Concord-Gastonia, NC-SC', method='PUT', page='NextSong', registration=1509380319284, sessionId=5132, song='Christmas Tears Will Fall', status=200, ts=1513720872284, userAgent='\"Mozilla/5.0 (Windows NT 6.1) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/36.0.1985.125 Safari/537.36\"', userId='1046')]"
+       "[Row(artist='Harmonia', auth='Logged In', firstName='Ryan', gender='M', itemInSession=0, lastName='Smith', length=655.77751, level='free', location='San Jose-Sunnyvale-Santa Clara, CA', method='PUT', page='NextSong', registration=1541016707796.0, sessionId=583, song='Sehr kosmisch', status=200, ts=1542241826796, userAgent='\"Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/537.36 (KHTML, like Gecko) Ubuntu Chromium/36.0.1985.125 Chrome/36.0.1985.125 Safari/537.36\"', userId='26')]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -75,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -94,7 +95,7 @@
       " |-- location: string (nullable = true)\n",
       " |-- method: string (nullable = true)\n",
       " |-- page: string (nullable = true)\n",
-      " |-- registration: long (nullable = true)\n",
+      " |-- registration: double (nullable = true)\n",
       " |-- sessionId: long (nullable = true)\n",
       " |-- song: string (nullable = true)\n",
       " |-- status: long (nullable = true)\n",
@@ -129,19 +130,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+-------------+---------+---------+------+-------------+--------+---------+-----+--------------------+------+--------+-------------+---------+--------------------+------+-------------+--------------------+------+\n",
-      "|       artist|     auth|firstName|gender|itemInSession|lastName|   length|level|            location|method|    page| registration|sessionId|                song|status|           ts|           userAgent|userId|\n",
-      "+-------------+---------+---------+------+-------------+--------+---------+-----+--------------------+------+--------+-------------+---------+--------------------+------+-------------+--------------------+------+\n",
-      "|Showaddywaddy|Logged In|  Kenneth|     M|          112|Matthews|232.93342| paid|Charlotte-Concord...|   PUT|NextSong|1509380319284|     5132|Christmas Tears W...|   200|1513720872284|\"Mozilla/5.0 (Win...|  1046|\n",
-      "|   Lily Allen|Logged In|Elizabeth|     F|            7|   Chase|195.23873| free|Shreveport-Bossie...|   PUT|NextSong|1512718541284|     5027|       Cheryl Tweedy|   200|1513720878284|\"Mozilla/5.0 (Win...|  1000|\n",
-      "+-------------+---------+---------+------+-------------+--------+---------+-----+--------------------+------+--------+-------------+---------+--------------------+------+-------------+--------------------+------+\n",
+      "+-----------+---------+---------+------+-------------+--------+---------+-----+--------------------+------+--------+-----------------+---------+---------------+------+-------------+--------------------+------+\n",
+      "|     artist|     auth|firstName|gender|itemInSession|lastName|   length|level|            location|method|    page|     registration|sessionId|           song|status|           ts|           userAgent|userId|\n",
+      "+-----------+---------+---------+------+-------------+--------+---------+-----+--------------------+------+--------+-----------------+---------+---------------+------+-------------+--------------------+------+\n",
+      "|   Harmonia|Logged In|     Ryan|     M|            0|   Smith|655.77751| free|San Jose-Sunnyval...|   PUT|NextSong|1.541016707796E12|      583|  Sehr kosmisch|   200|1542241826796|\"Mozilla/5.0 (X11...|    26|\n",
+      "|The Prodigy|Logged In|     Ryan|     M|            1|   Smith|260.07465| free|San Jose-Sunnyval...|   PUT|NextSong|1.541016707796E12|      583|The Big Gundown|   200|1542242481796|\"Mozilla/5.0 (X11...|    26|\n",
+      "+-----------+---------+---------+------+-------------+--------+---------+-----+--------------------+------+--------+-----------------+---------+---------------+------+-------------+--------------------+------+\n",
       "\n"
      ]
     }
@@ -152,19 +153,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+-------------+---------+---------+------+-------------+--------+---------+-----+--------------------+------+--------+-------------+---------+--------------------+------+-------------+--------------------+------+\n",
-      "|       artist|     auth|firstName|gender|itemInSession|lastName|   length|level|            location|method|    page| registration|sessionId|                song|status|           ts|           userAgent|userId|\n",
-      "+-------------+---------+---------+------+-------------+--------+---------+-----+--------------------+------+--------+-------------+---------+--------------------+------+-------------+--------------------+------+\n",
-      "|Showaddywaddy|Logged In|  Kenneth|     M|          112|Matthews|232.93342| paid|Charlotte-Concord...|   PUT|NextSong|1509380319284|     5132|Christmas Tears W...|   200|1513720872284|\"Mozilla/5.0 (Win...|  1046|\n",
-      "|   Lily Allen|Logged In|Elizabeth|     F|            7|   Chase|195.23873| free|Shreveport-Bossie...|   PUT|NextSong|1512718541284|     5027|       Cheryl Tweedy|   200|1513720878284|\"Mozilla/5.0 (Win...|  1000|\n",
-      "+-------------+---------+---------+------+-------------+--------+---------+-----+--------------------+------+--------+-------------+---------+--------------------+------+-------------+--------------------+------+\n",
+      "+-----------+---------+---------+------+-------------+--------+---------+-----+--------------------+------+--------+-----------------+---------+---------------+------+-------------+--------------------+------+\n",
+      "|     artist|     auth|firstName|gender|itemInSession|lastName|   length|level|            location|method|    page|     registration|sessionId|           song|status|           ts|           userAgent|userId|\n",
+      "+-----------+---------+---------+------+-------------+--------+---------+-----+--------------------+------+--------+-----------------+---------+---------------+------+-------------+--------------------+------+\n",
+      "|   Harmonia|Logged In|     Ryan|     M|            0|   Smith|655.77751| free|San Jose-Sunnyval...|   PUT|NextSong|1.541016707796E12|      583|  Sehr kosmisch|   200|1542241826796|\"Mozilla/5.0 (X11...|    26|\n",
+      "|The Prodigy|Logged In|     Ryan|     M|            1|   Smith|260.07465| free|San Jose-Sunnyval...|   PUT|NextSong|1.541016707796E12|      583|The Big Gundown|   200|1542242481796|\"Mozilla/5.0 (X11...|    26|\n",
+      "+-----------+---------+---------+------+-------------+--------+---------+-----+--------------------+------+--------+-----------------+---------+---------------+------+-------------+--------------------+------+\n",
       "\n"
      ]
     }
@@ -180,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -190,7 +191,7 @@
       "+--------+\n",
       "|count(1)|\n",
       "+--------+\n",
-      "|   10000|\n",
+      "|    8056|\n",
       "+--------+\n",
       "\n"
      ]
@@ -206,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {
     "scrolled": true
    },
@@ -214,39 +215,10 @@
     {
      "data": {
       "text/plain": [
-       "[Row(userID='1046', firstname='Kenneth', page='NextSong', song='Christmas Tears Will Fall'),\n",
-       " Row(userID='1046', firstname='Kenneth', page='NextSong', song='Be Wary Of A Woman'),\n",
-       " Row(userID='1046', firstname='Kenneth', page='NextSong', song='Public Enemy No.1'),\n",
-       " Row(userID='1046', firstname='Kenneth', page='NextSong', song='Reign Of The Tyrants'),\n",
-       " Row(userID='1046', firstname='Kenneth', page='NextSong', song='Father And Son'),\n",
-       " Row(userID='1046', firstname='Kenneth', page='NextSong', song='No. 5'),\n",
-       " Row(userID='1046', firstname='Kenneth', page='NextSong', song='Seventeen'),\n",
-       " Row(userID='1046', firstname='Kenneth', page='Home', song=None),\n",
-       " Row(userID='1046', firstname='Kenneth', page='NextSong', song='War on war'),\n",
-       " Row(userID='1046', firstname='Kenneth', page='NextSong', song='Killermont Street'),\n",
-       " Row(userID='1046', firstname='Kenneth', page='NextSong', song='Black & Blue'),\n",
-       " Row(userID='1046', firstname='Kenneth', page='Logout', song=None),\n",
-       " Row(userID='1046', firstname='Kenneth', page='Home', song=None),\n",
-       " Row(userID='1046', firstname='Kenneth', page='NextSong', song='Heads Will Roll'),\n",
-       " Row(userID='1046', firstname='Kenneth', page='NextSong', song='Bleed It Out [Live At Milton Keynes]'),\n",
-       " Row(userID='1046', firstname='Kenneth', page='NextSong', song='Clocks'),\n",
-       " Row(userID='1046', firstname='Kenneth', page='NextSong', song='Love Rain'),\n",
-       " Row(userID='1046', firstname='Kenneth', page='NextSong', song=\"Ry Ry's Song (Album Version)\"),\n",
-       " Row(userID='1046', firstname='Kenneth', page='NextSong', song='The Invisible Man'),\n",
-       " Row(userID='1046', firstname='Kenneth', page='NextSong', song='Catch You Baby (Steve Pitron & Max Sanna Radio Edit)'),\n",
-       " Row(userID='1046', firstname='Kenneth', page='NextSong', song='Ask The Mountains'),\n",
-       " Row(userID='1046', firstname='Kenneth', page='NextSong', song='Given Up (Album Version)'),\n",
-       " Row(userID='1046', firstname='Kenneth', page='NextSong', song='El Cuatrero'),\n",
-       " Row(userID='1046', firstname='Kenneth', page='NextSong', song='Hero/Heroine'),\n",
-       " Row(userID='1046', firstname='Kenneth', page='NextSong', song='Spring'),\n",
-       " Row(userID='1046', firstname='Kenneth', page='NextSong', song='Rising Moon'),\n",
-       " Row(userID='1046', firstname='Kenneth', page='NextSong', song='Tough Little Boys'),\n",
-       " Row(userID='1046', firstname='Kenneth', page='NextSong', song=\"Qu'Est-Ce Que T'Es Belle\"),\n",
-       " Row(userID='1046', firstname='Kenneth', page='NextSong', song='Secrets'),\n",
-       " Row(userID='1046', firstname='Kenneth', page='NextSong', song='Under The Gun')]"
+       "[]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -262,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -308,25 +280,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<function __main__.<lambda>(x)>"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "spark.udf.register(\"get_hour\", lambda x: int(datetime.datetime.fromtimestamp(x / 1000.0).hour))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[Row(artist='Showaddywaddy', auth='Logged In', firstName='Kenneth', gender='M', itemInSession=112, lastName='Matthews', length=232.93342, level='paid', location='Charlotte-Concord-Gastonia, NC-SC', method='PUT', page='NextSong', registration=1509380319284, sessionId=5132, song='Christmas Tears Will Fall', status=200, ts=1513720872284, userAgent='\"Mozilla/5.0 (Windows NT 6.1) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/36.0.1985.125 Safari/537.36\"', userId='1046', hour='22')]"
+       "[Row(artist='Harmonia', auth='Logged In', firstName='Ryan', gender='M', itemInSession=0, lastName='Smith', length=655.77751, level='free', location='San Jose-Sunnyvale-Santa Clara, CA', method='PUT', page='NextSong', registration=1541016707796.0, sessionId=583, song='Sehr kosmisch', status=200, ts=1542241826796, userAgent='\"Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/537.36 (KHTML, like Gecko) Ubuntu Chromium/36.0.1985.125 Chrome/36.0.1985.125 Safari/537.36\"', userId='26', hour='18')]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -342,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -358,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -368,26 +351,26 @@
       "+----+--------------+\n",
       "|hour|plays_per_hour|\n",
       "+----+--------------+\n",
-      "|   0|           456|\n",
-      "|   1|           454|\n",
-      "|   2|           382|\n",
-      "|   3|           302|\n",
-      "|   4|           352|\n",
-      "|   5|           276|\n",
-      "|   6|           348|\n",
-      "|   7|           358|\n",
-      "|   8|           375|\n",
-      "|   9|           249|\n",
-      "|  10|           216|\n",
-      "|  11|           228|\n",
-      "|  12|           251|\n",
-      "|  13|           339|\n",
-      "|  14|           462|\n",
-      "|  15|           479|\n",
-      "|  16|           484|\n",
-      "|  17|           430|\n",
-      "|  18|           362|\n",
-      "|  19|           295|\n",
+      "|   0|           172|\n",
+      "|   1|           196|\n",
+      "|   2|           207|\n",
+      "|   3|           253|\n",
+      "|   4|           314|\n",
+      "|   5|           322|\n",
+      "|   6|           314|\n",
+      "|   7|           330|\n",
+      "|   8|           444|\n",
+      "|   9|           470|\n",
+      "|  10|           518|\n",
+      "|  11|           491|\n",
+      "|  12|           507|\n",
+      "|  13|           386|\n",
+      "|  14|           367|\n",
+      "|  15|           271|\n",
+      "|  16|           229|\n",
+      "|  17|           200|\n",
+      "|  18|           156|\n",
+      "|  19|           148|\n",
       "+----+--------------+\n",
       "only showing top 20 rows\n",
       "\n"
@@ -407,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -416,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -424,36 +407,43 @@
      "output_type": "stream",
      "text": [
       "   hour  plays_per_hour\n",
-      "0     0             456\n",
-      "1     1             454\n",
-      "2     2             382\n",
-      "3     3             302\n",
-      "4     4             352\n",
-      "5     5             276\n",
-      "6     6             348\n",
-      "7     7             358\n",
-      "8     8             375\n",
-      "9     9             249\n",
-      "10   10             216\n",
-      "11   11             228\n",
-      "12   12             251\n",
-      "13   13             339\n",
-      "14   14             462\n",
-      "15   15             479\n",
-      "16   16             484\n",
-      "17   17             430\n",
-      "18   18             362\n",
-      "19   19             295\n",
-      "20   20             257\n",
-      "21   21             248\n",
-      "22   22             369\n",
-      "23   23             375\n"
+      "0     0             172\n",
+      "1     1             196\n",
+      "2     2             207\n",
+      "3     3             253\n",
+      "4     4             314\n",
+      "5     5             322\n",
+      "6     6             314\n",
+      "7     7             330\n",
+      "8     8             444\n",
+      "9     9             470\n",
+      "10   10             518\n",
+      "11   11             491\n",
+      "12   12             507\n",
+      "13   13             386\n",
+      "14   14             367\n",
+      "15   15             271\n",
+      "16   16             229\n",
+      "17   17             200\n",
+      "18   18             156\n",
+      "19   19             148\n",
+      "20   20             121\n",
+      "21   21             109\n",
+      "22   22             138\n",
+      "23   23             157\n"
      ]
     }
    ],
    "source": [
     "print(songs_in_hour_pd)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -472,9 +462,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
